arcsoft/inc/arcsoft_face_sdk.h

//版本信息
typedef struct {
	MPChar Version;							// 版本号
	MPChar BuildDate;						// 构建日期
	MPChar CopyRight;						// Copyright
}ASF_VERSION;
//检测时候 Orientation 优先级别
typedef MInt32 ASF_OrientPriority;
enum ArcSoftFace_OrientPriority {
	ASF_OP_0_ONLY = 0x1,			// 0, 0, ...
	ASF_OP_90_ONLY = 0x2,			// 90, 90, ...
	ASF_OP_270_ONLY = 0x3,			// 270, 270, ...
	ASF_OP_180_ONLY = 0x4,			// 180, 180, ...
	ASF_OP_0_HIGHER_EXT = 0x5,		// 0, 90, 270, 180, 0, 90, 270, 180, ...
									// 当前SDK版本，VIDEO模式下支持ASF_OP_0_HIGHER_EXT检测，IMAGE模式不支持
};
//orientation 角度，逆时针方向	
typedef MInt32 ASF_OrientCode;
enum ArcSoftFace_OrientCode {
	ASF_OC_0 = 0x1,			// 0 degree 
	ASF_OC_90 = 0x2,		// 90 degree 
	ASF_OC_270 = 0x3,		// 270 degree 
	ASF_OC_180 = 0x4,   	// 180 degree 
	ASF_OC_30 = 0x5,		// 30 degree 
	ASF_OC_60 = 0x6,		// 60 degree 
	ASF_OC_120 = 0x7,		// 120 degree 
	ASF_OC_150 = 0x8,		// 150 degree 
	ASF_OC_210 = 0x9,		// 210 degree 
	ASF_OC_240 = 0xa,		// 240 degree 
	ASF_OC_300 = 0xb,		// 300 degree 
	ASF_OC_330 = 0xc		// 330 degree 
};
//单人脸信息
typedef struct {
	MRECT		faceRect;		// 人脸框信息
	MInt32		faceOrient;		// 输入图像的角度，可以参考 ArcFaceCompare_OrientCode
} ASF_SingleFaceInfo, *LPASF_SingleFaceInfo;
//多人脸信息
typedef struct {
	MRECT* 		 faceRect;			// 人脸框信息
	MInt32*		 faceOrient;		// 输入图像的角度，可以参考 ArcFaceCompare_OrientCode . 
	MInt32		 faceNum;			// 检测到的人脸个数
	MInt32*      faceID;			// face ID，IMAGE模式下不返回FaceID
}ASF_MultiFaceInfo, *LPASF_MultiFaceInfo;
typedef struct{
	MPChar startTime;		//开始时间
	MPChar endTime;			//截止时间
	MPChar platform;		//平台
	MPChar sdkType;			//sdk类型
	MPChar appId;			//APPID
	MPChar sdkKey;			//SDKKEY
	MPChar sdkVersion;		//SDK版本号
	MPChar fileVersion;		//激活文件版本号
}ASF_ActiveFileInfo, *LPASF_ActiveFileInfo;