src/imp/arcsoft_sys.rs

#[test]
fn bindgen_test_layout___tag_ASVL_OFFSCREEN() {
    assert_eq!(
        ::std::mem::size_of::<__tag_ASVL_OFFSCREEN>(),
        64usize,
        concat!("Size of: ", stringify!(__tag_ASVL_OFFSCREEN))
    );
    assert_eq!(
        ::std::mem::align_of::<__tag_ASVL_OFFSCREEN>(),
        8usize,
        concat!("Alignment of ", stringify!(__tag_ASVL_OFFSCREEN))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<__tag_ASVL_OFFSCREEN>())).u32PixelArrayFormat as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_OFFSCREEN),
            "::",
            stringify!(u32PixelArrayFormat)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_OFFSCREEN>())).i32Width as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_OFFSCREEN),
            "::",
            stringify!(i32Width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_OFFSCREEN>())).i32Height as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_OFFSCREEN),
            "::",
            stringify!(i32Height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_OFFSCREEN>())).ppu8Plane as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_OFFSCREEN),
            "::",
            stringify!(ppu8Plane)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_OFFSCREEN>())).pi32Pitch as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_OFFSCREEN),
            "::",
            stringify!(pi32Pitch)
        )
    );
}
pub type ASVLOFFSCREEN = __tag_ASVL_OFFSCREEN;
pub type LPASVLOFFSCREEN = *mut __tag_ASVL_OFFSCREEN;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __tag_ASVL_VERSION {
    pub lCodebase: MLong,
    pub lMajor: MLong,
    pub lMinor: MLong,
    pub lBuild: MLong,
    pub Version: *const MChar,
    pub BuildDate: *const MChar,
    pub CopyRight: *const MChar,
}
#[test]
fn bindgen_test_layout___tag_ASVL_VERSION() {
    assert_eq!(
        ::std::mem::size_of::<__tag_ASVL_VERSION>(),
        56usize,
        concat!("Size of: ", stringify!(__tag_ASVL_VERSION))
    );
    assert_eq!(
        ::std::mem::align_of::<__tag_ASVL_VERSION>(),
        8usize,
        concat!("Alignment of ", stringify!(__tag_ASVL_VERSION))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).lCodebase as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(lCodebase)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).lMajor as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(lMajor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).lMinor as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(lMinor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).lBuild as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(lBuild)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).Version as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(Version)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).BuildDate as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(BuildDate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__tag_ASVL_VERSION>())).CopyRight as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(__tag_ASVL_VERSION),
            "::",
            stringify!(CopyRight)
        )
    );
}
pub type ASVL_VERSION = __tag_ASVL_VERSION;
extern "C" {
    pub fn ASVL_GetVersion() -> *const ASVL_VERSION;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_VERSION {
    pub Version: MPChar,
    pub BuildDate: MPChar,
    pub CopyRight: MPChar,
}
#[test]
fn bindgen_test_layout_ASF_VERSION() {
    assert_eq!(
        ::std::mem::size_of::<ASF_VERSION>(),
        24usize,
        concat!("Size of: ", stringify!(ASF_VERSION))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_VERSION>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_VERSION))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_VERSION>())).Version as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_VERSION),
            "::",
            stringify!(Version)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_VERSION>())).BuildDate as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_VERSION),
            "::",
            stringify!(BuildDate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_VERSION>())).CopyRight as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_VERSION),
            "::",
            stringify!(CopyRight)
        )
    );
}
pub type ASF_OrientPriority = MInt32;
pub const ArcSoftFace_OrientPriority_ASF_OP_0_ONLY: ArcSoftFace_OrientPriority = 1;
pub const ArcSoftFace_OrientPriority_ASF_OP_90_ONLY: ArcSoftFace_OrientPriority = 2;
pub const ArcSoftFace_OrientPriority_ASF_OP_270_ONLY: ArcSoftFace_OrientPriority = 3;
pub const ArcSoftFace_OrientPriority_ASF_OP_180_ONLY: ArcSoftFace_OrientPriority = 4;
pub const ArcSoftFace_OrientPriority_ASF_OP_0_HIGHER_EXT: ArcSoftFace_OrientPriority = 5;
pub type ArcSoftFace_OrientPriority = u32;
pub type ASF_OrientCode = MInt32;
pub const ArcSoftFace_OrientCode_ASF_OC_0: ArcSoftFace_OrientCode = 1;
pub const ArcSoftFace_OrientCode_ASF_OC_90: ArcSoftFace_OrientCode = 2;
pub const ArcSoftFace_OrientCode_ASF_OC_270: ArcSoftFace_OrientCode = 3;
pub const ArcSoftFace_OrientCode_ASF_OC_180: ArcSoftFace_OrientCode = 4;
pub const ArcSoftFace_OrientCode_ASF_OC_30: ArcSoftFace_OrientCode = 5;
pub const ArcSoftFace_OrientCode_ASF_OC_60: ArcSoftFace_OrientCode = 6;
pub const ArcSoftFace_OrientCode_ASF_OC_120: ArcSoftFace_OrientCode = 7;
pub const ArcSoftFace_OrientCode_ASF_OC_150: ArcSoftFace_OrientCode = 8;
pub const ArcSoftFace_OrientCode_ASF_OC_210: ArcSoftFace_OrientCode = 9;
pub const ArcSoftFace_OrientCode_ASF_OC_240: ArcSoftFace_OrientCode = 10;
pub const ArcSoftFace_OrientCode_ASF_OC_300: ArcSoftFace_OrientCode = 11;
pub const ArcSoftFace_OrientCode_ASF_OC_330: ArcSoftFace_OrientCode = 12;
pub type ArcSoftFace_OrientCode = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_SingleFaceInfo {
    pub faceRect: MRECT,
    pub faceOrient: MInt32,
}
#[test]
fn bindgen_test_layout_ASF_SingleFaceInfo() {
    assert_eq!(
        ::std::mem::size_of::<ASF_SingleFaceInfo>(),
        20usize,
        concat!("Size of: ", stringify!(ASF_SingleFaceInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_SingleFaceInfo>(),
        4usize,
        concat!("Alignment of ", stringify!(ASF_SingleFaceInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_SingleFaceInfo>())).faceRect as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_SingleFaceInfo),
            "::",
            stringify!(faceRect)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_SingleFaceInfo>())).faceOrient as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_SingleFaceInfo),
            "::",
            stringify!(faceOrient)
        )
    );
}
pub type LPASF_SingleFaceInfo = *mut ASF_SingleFaceInfo;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_MultiFaceInfo {
    pub faceRect: *mut MRECT,
    pub faceOrient: *mut MInt32,
    pub faceNum: MInt32,
    pub faceID: *mut MInt32,
}
#[test]
fn bindgen_test_layout_ASF_MultiFaceInfo() {
    assert_eq!(
        ::std::mem::size_of::<ASF_MultiFaceInfo>(),
        32usize,
        concat!("Size of: ", stringify!(ASF_MultiFaceInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_MultiFaceInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_MultiFaceInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_MultiFaceInfo>())).faceRect as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_MultiFaceInfo),
            "::",
            stringify!(faceRect)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_MultiFaceInfo>())).faceOrient as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_MultiFaceInfo),
            "::",
            stringify!(faceOrient)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_MultiFaceInfo>())).faceNum as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_MultiFaceInfo),
            "::",
            stringify!(faceNum)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_MultiFaceInfo>())).faceID as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_MultiFaceInfo),
            "::",
            stringify!(faceID)
        )
    );
}
pub type LPASF_MultiFaceInfo = *mut ASF_MultiFaceInfo;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_ActiveFileInfo {
    pub startTime: MPChar,
    pub endTime: MPChar,
    pub platform: MPChar,
    pub sdkType: MPChar,
    pub appId: MPChar,
    pub sdkKey: MPChar,
    pub sdkVersion: MPChar,
    pub fileVersion: MPChar,
}
